--- a/3.html
+++ b/3.html
@@ -20,6 +20,11 @@ and <u>web</u> applications
 <img src="coding.jpg" width="100%">
 </body>
 <body>
+    <style>
+        a {
+    color:rebeccapurple;
+ }
+</style> 
     <h1><a href="index.html">WEB</a></h1>
      <ol>
         <li><a href="1.html">HTML</a></li>
