--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 </haed>
 
 <body>
-<h1>WEHAGO</h1>  Hypertext Markup Language (MTML) is the standard markup language for <strong>creating web pages</strong>
+    <style>
+        a {
+    color:red;
+ }
+</style> 
+    <h1>WEHAGO</h1>  Hypertext Markup Language (MTML) is the standard markup language for <strong>creating web pages</strong>
 and <u>web</u> applications
 <!--본문-->
 <ol>
