--- a/google.html
+++ b/google.html
@@ -44,22 +44,19 @@
   </div>
 <div class="secon-line">
  <span>
-    <a hren="#">About</a>
-    <a hren="#">Advertising</a>
-    <a hren="#">Business</a>
-    <a hren="#">How search works</a>
+    <a href="#">About</a>
+    <a href="#">Advertising</a>
+    <a href="#">Business</a>
+    <a href="#">How search works</a>
 
  </span>
   <spen class="second-line-second ">
-     <a hren="#">Privacy</a>
-     <a hren="#">Term</a>
-     <a hren="#">Settings</a>
+     <a href="#">Privacy</a>
+     <a href="#">Term</a>
+     <a href="#">Settings</a>
 
 
   </spen>
-</div>
  </div>
-
-
 </body>
 </html>
